--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,11 @@
 [db]
-172.31.80.22
+172.31.80.219
+
+[backend]
+172.31.84.67
+
+[frontend]
+172.31.90.33
 
 [all:vars]
 ansible_password = DevOps321 
