--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,4 +1,4 @@
-DB_HOST = db
-login_user = root
-login_password = ExpenseApp@1
-login_host = db
+DB_HOST: 172.31.80.219
+login_user: root
+login_password: ExpenseApp@1
+login_host: 172.31.80.219
