--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: installing nginx
   ansible.builtin.dnf:
     name: nginx
-    state: installed
+    state: latest
 
 - name: enable and start nginx service
   ansible.builtin.service:
