--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -2,3 +2,5 @@ DB_HOST: 172.31.90.216
 login_user: root
 login_password: ExpenseApp@1
 login_host: 172.31.90.216
+app_location: /app
+component: backend
