--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -59,7 +59,7 @@
 - name: import data into mysql
   community.mysql.mysql_db:
     login_user: "{{login_user}}"
-    login_password: "{{login_password}}"
+    login_password: "{{root_password}}"
     login_host: "{{login_host}}"
     state: import
     name: all
