--- a/roles/db/tasks/main.yaml
+++ b/roles/db/tasks/main.yaml
@@ -20,7 +20,7 @@
 # check password is already setup or not
 - name: check DB connection
   community.mysql.mysql_info:
-    login_user: root
+    login_user: "{{login_user}}"
     login_password: "{{root_password}}"
     login_host: "{{login_host}}"
     filter: version
