ansible dynamic inventory

--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -1,3 +1,11 @@
 plugin: amazon.aws.aws_ec2
 regions:
 - us-east-1
+keyed groups:
+- key: tags['Name']
+  prefix: ''
+  parent_group: ""
+filter:
+  tag:Name: "Backend*"
+compose:
+  ansible_host: private_ip_address
