ansible dynamic inventory

--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -6,6 +6,6 @@ keyed groups:
   prefix: ''
   parent_group: ""
 filter:
-  tag:Name: "Backend*"
+  tag:Name: "DB*"
 compose:
   ansible_host: private_ip_address
