ansible dynamic inventory

--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -4,8 +4,8 @@ regions:
 keyed groups:
 - key: tags['Name']
   prefix: ''
-  parent_group: ""
-filter:
+  parent_group: ''
+filters:
   tag:Name: "DB*"
 compose:
   ansible_host: private_ip_address
