--- a/expense-aws.yaml
+++ b/expense-aws.yaml
@@ -14,3 +14,7 @@
     - Backend
     - Frontend
     register: ec2_instances_output
+    
+- name: print output
+  ansible.builtin.debug:
+   msg: "{{ec2_instances_output}}"
