--- a/expense-aws.yaml
+++ b/expense-aws.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: create ec2 instance
-    ansible.aws.ec2_instance:
+    amazon.aws.ec2_instance:
       instance_type: t2.micro
       name: "{{item}}"
       image_id: ami-090252cbe067a9e58
@@ -14,7 +14,7 @@
     - Backend
     - Frontend
     register: ec2_instances_output
-    
+
 - name: print output
   ansible.builtin.debug:
    msg: "{{ec2_instances_output}}"
