--- a/expense-aws.yaml
+++ b/expense-aws.yaml
@@ -6,6 +6,7 @@
     amazon.aws.ec2_instance:
       instance_type: t2.micro
       name: "{{item}}"
+      security_group: allow-everything
       image_id: ami-090252cbe067a9e58
       tags:
         Name: "{{item}}"
