--- a/expense-aws.yaml
+++ b/expense-aws.yaml
@@ -1,10 +1,10 @@
 - name: create ec2 and r53 records
   hosts: localhost
-  become: yes
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
       instance_type: t2.micro
+      region: us-east-1
       name: "{{item}}"
       security_group: allow-everything
       image_id: ami-090252cbe067a9e58
